modified css and index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -361,3 +361,45 @@ section .hw-color {
   font-size: 32px;
   text-align: center;
 }
+
+.more-questions {
+  text-decoration: underline;
+  text-decoration-color: grey;
+  color: black;
+}
+
+/*Contact us styling*/
+.contact-us {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+  margin-top: 70px;
+}
+
+.contact-us-item {
+  text-align: center;
+  min-height: 225px;
+  flex: 0 0 20%;
+  background-color: #37dca9;
+  margin: 0 15px;
+  padding-top: 80px;
+  position: relative;
+}
+
+.contact-us-icon {
+  height: 130px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  left: 0;
+  margin: 0 auto;
+  right: 0;
+  top: -25px;
+}
+
+.fa-comment {
+  color: white;
+  text-shadow: -3px 0 #000, 0 3px #000, 3px 0 #000, 0 -3px #000;
+}
