--- a/css/styles.css
+++ b/css/styles.css
@@ -460,3 +460,99 @@ p.contact-us-text {
   right: 0;
   top: -30px;
 }
+
+.contact-us-social-link {
+  font-weight: bold;
+  color: black;
+}
+
+.contact-us-social-link:hover {
+  color: #047aed;
+  cursor: pointer;
+}
+
+.contact-us-black-line {
+  height: 23px;
+  margin: 17px auto 0 auto;
+  position: relative;
+}
+
+.contact-us-black-line::before {
+  content: "";
+  border-bottom: 3px solid #000000;
+  width: 50px;
+  position: absolute;
+  height: 0;
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/*Styling of footer area*/
+footer {
+  margin-top: 20px;
+  background-color: #26282c;
+}
+
+.footer-flex1 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.quick-contact {
+  margin-top: 20px;
+}
+
+.quick-footer {
+  color: white;
+  font-size: 24px;
+}
+
+.p-footer {
+  color: #6c757d;
+  font-size: 14px;
+}
+
+.p-margin {
+  margin-top: 8px;
+}
+
+.social-links {
+  margin-top: 20px;
+  display: inline-flex;
+}
+
+.social-margin {
+  margin-right: 10px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  font-size: 20px;
+  height: 36px;
+  width: 36px;
+  padding: 0 8px;
+  text-align: center;
+  opacity: 0.75;
+  transition: 2s color ease-in-out;
+}
+
+.footer-links:hover {
+  color: darkgoldenrod;
+  cursor: pointer;
+}
+
+.footer-border {
+  border: 1px solid #6c757d;
+  width: 1020px;
+  margin-top: 20px;
+}
+
+.copyright-flexbox {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-copyright {
+  color: white;
+  margin: 20px 0;
+}
