--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,6 @@ body {
   background-color: #f9fafb;
 }
 
-/*--#f9fafb--*/
-
 header {
   background-color: #047aed;
   color: #fff;
@@ -555,4 +553,66 @@ footer {
 .footer-copyright {
   color: white;
   margin: 20px 0;
+}
+
+/*hiding mobile menu so that it does'nt appear in big screens*/
+.mobile-container {
+  display: none;
+}
+
+/*creating media queries for smaller and medium devices*/
+
+/*for mobile devices with width between 320px to 767px*/
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  /*header and .overlay-image:after are from the desktop view*/
+
+  header {
+    display: none;
+  }
+
+  .overlay-image:after {
+    top: 50px;
+  }
+
+  .mobile-container {
+    display: block;
+    background-color: #047aed;
+    color: #fff;
+    position: fixed;
+    z-index: 3;
+    width: 100%;
+  }
+
+  .topnav {
+    overflow: hidden;
+    background-color: #047aed;
+    position: relative;
+  }
+
+  .flex-mobileMenu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #047aed;
+    color: white;
+  }
+
+  .topnav #myLinks {
+    display: none;
+    text-align: center;
+    background-color: transparent;
+  }
+
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 14px;
+    display: block;
+  }
+
+  .topnav a.icon {
+    background-color: black;
+    display: block;
+  }
 }
