--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,7 @@ nav ul {
   scroll-margin-top: 5em;
 }
 
+/*Styling of services cards*/
 section .sub-heading1 {
   display: flex;
   flex-direction: column;
@@ -566,6 +567,10 @@ footer {
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   /*header and .overlay-image:after are from the desktop view*/
 
+  .container {
+    width: 100%;
+  }
+
   header {
     display: none;
   }
@@ -615,5 +620,34 @@ footer {
   .topnav a.icon {
     background-color: black;
     display: block;
+  }
+
+  /*styling of horizontal scrollable cards*/
+  section .grid {
+    width: 500px;
+    text-align: center;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns:
+      10px
+      repeat(16, calc(50% - 50px))
+      10px;
+    grid-template-rows: minmax(150px, 1fr);
+  }
+
+  section .grid::before,
+  section .grid::after {
+    content: "";
+  }
+
+  section .cards {
+    width: 200px;
+    text-align: center;
+    border: 1px solid #bfbfbf;
+    border-radius: 5px;
+    padding: 20px 10px 20px 10px;
+    background-color: #fff;
+    box-shadow: 1px 1px 5px #888888;
+    transition: box-shadow 0.2s, transform 0.2s;
   }
 }
