--- a/css/styles.css
+++ b/css/styles.css
@@ -624,13 +624,13 @@ footer {
 
   /*styling of horizontal scrollable cards*/
   section .grid {
-    width: 500px;
+    width: 100%;
     text-align: center;
     display: grid;
     grid-gap: 10px;
     grid-template-columns:
       10px
-      repeat(16, calc(50% - 50px))
+      repeat(16, calc(50% - 40px))
       10px;
     grid-template-rows: minmax(150px, 1fr);
   }
