--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,7 @@ footer {
 
   /*styling of horizontal scrollable cards*/
   section .grid {
-    width: 100%;
+    width: 300px;
     text-align: center;
     display: grid;
     grid-gap: 10px;
