--- a/css/styles.css
+++ b/css/styles.css
@@ -572,7 +572,17 @@ footer {
   }
 
   .overlay-image:after {
+    top: 60px;
+  }
+
+  .overlay-text {
+    font-size: 16px;
     top: 50px;
+  }
+
+  .hero-text1 {
+    font-size: 14px;
+    top: 100px;
   }
 
   .mobile-container {
@@ -582,6 +592,7 @@ footer {
     position: fixed;
     z-index: 3;
     width: 100%;
+    height: 60px;
   }
 
   .topnav {
@@ -607,7 +618,7 @@ footer {
 
   .topnav a {
     color: white;
-    padding: 14px 16px;
+    padding: 18px 16px;
     text-decoration: none;
     font-size: 14px;
     display: block;
@@ -616,6 +627,7 @@ footer {
   .topnav a.icon {
     background-color: black;
     display: block;
+    height: 60px;
   }
 
   /*styling of horizontal scrollable cards*/
