--- a/css/styles.css
+++ b/css/styles.css
@@ -578,6 +578,7 @@ footer {
 
   .overlay-image:after {
     top: 60px;
+    height: 80vh;
   }
 
   .overlay-text {
@@ -587,7 +588,7 @@ footer {
 
   .hero-text1 {
     font-size: 14px;
-    top: 105px;
+    top: 102px;
   }
 
   .mobile-container {
