--- a/css/styles.css
+++ b/css/styles.css
@@ -591,6 +591,10 @@ footer {
     top: 100px;
   }
 
+  section .h2-text {
+    font-size: 16px;
+  }
+
   .mobile-container {
     display: block;
     background-color: #047aed;
