--- a/css/styles.css
+++ b/css/styles.css
@@ -644,6 +644,8 @@ footer {
   /*styling of horizontal scrollable cards*/
   section .grid {
     width: 500px;
+    height: 60px; /*...*/
+    overflow: hidden; /*...*/
     text-align: center;
     display: grid;
     grid-gap: 10px;
@@ -661,6 +663,11 @@ footer {
 
   section .cards {
     width: 200px;
+    height: 90px; /*...*/
+    white-space: nowrap; /*...*/
+    overflow-x: scroll; /*...*/
+    overflow-y: hidden; /*...*/
+    -webkit-overflow-scrolling: touch; /*...*/
     text-align: center;
     border: 1px solid #bfbfbf;
     border-radius: 5px;
