--- a/css/styles.css
+++ b/css/styles.css
@@ -596,6 +596,11 @@ footer {
     text-align: center;
   }
 
+  .sub-heading2-para {
+    font-size: 16px;
+    text-align: center;
+  }
+
   .mobile-container {
     display: block;
     background-color: #047aed;
