--- a/css/styles.css
+++ b/css/styles.css
@@ -648,6 +648,7 @@ footer {
 
   section .grid-1 {
     display: grid;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     column-gap: 15px;
   }
