--- a/css/styles.css
+++ b/css/styles.css
@@ -650,7 +650,7 @@ footer {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    column-gap: 15px;
+    row-gap: 5px;
   }
 
   /*styling of horizontal scrollable cards*/
