--- a/css/styles.css
+++ b/css/styles.css
@@ -641,6 +641,7 @@ footer {
     text-align: center;
   }
 
+  /*styling of how it works*/
   .sub-heading2-para {
     font-size: 16px;
     text-align: center;
@@ -651,6 +652,10 @@ footer {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     row-gap: 5px;
+  }
+
+  section .card1 {
+    margin-top: 10px;
   }
 
   /*styling of horizontal scrollable cards*/
