--- a/css/styles.css
+++ b/css/styles.css
@@ -654,6 +654,12 @@ footer {
     row-gap: 5px;
   }
 
+  section .grid-flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   section .card1 {
     margin-top: 10px;
   }
