modified css/styles.css and index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -664,6 +664,11 @@ footer {
     margin-top: 10px;
   }
 
+  /*faq's*/
+  .h2-text {
+    text-align: center;
+  }
+
   /*styling of horizontal scrollable cards*/
   section .grid {
     width: 500px;
