--- a/css/styles.css
+++ b/css/styles.css
@@ -664,9 +664,20 @@ footer {
     margin-top: 10px;
   }
 
-  /*faq's*/
+  /* styling of faq's and accordion*/
   .h2-text {
     text-align: center;
+  }
+
+  .accordion {
+    width: 100%;
+    padding: 18px;
+    font-size: 16px;
+  }
+
+  .panel {
+    width: 100%;
+    font-size: 14px;
   }
 
   /*styling of horizontal scrollable cards*/
