--- a/css/styles.css
+++ b/css/styles.css
@@ -691,6 +691,11 @@ footer {
     text-align: center;
   }
 
+  .h3-contact-time {
+    font-size: 20px;
+    text-align: center;
+  }
+
   /*styling of horizontal scrollable cards*/
   section .grid {
     width: 500px;
