modified css/styles.css and index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -691,6 +691,17 @@ footer {
     text-align: center;
   }
 
+  /*Contact us styling*/
+  .contact-us {
+  }
+
+  .contact-us-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    row-gap: 10px;
+  }
+
   /*styling of horizontal scrollable cards*/
   section .grid {
     width: 500px;
