--- a/css/styles.css
+++ b/css/styles.css
@@ -706,6 +706,12 @@ footer {
     font-size: 20px;
   }
 
+  .footer-copyright {
+    color: white;
+    font-size: 14px;
+    margin: 30px 0;
+  }
+
   /*styling of horizontal scrollable cards*/
   section .grid {
     width: 500px;
