--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
   line-height: 1.6;
   font-weight: 300;
   background-color: #f9fafb;
+  overflow-x: hidden;
 }
 
 header {
@@ -569,10 +570,6 @@ footer {
 
   header {
     display: none;
-  }
-
-  .container {
-    width: 100%;
   }
 
   .mobile-container {
