--- a/css/styles.css
+++ b/css/styles.css
@@ -567,7 +567,13 @@ footer {
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   /*header and .overlay-image:after are from the desktop view*/
 
-  body {
+  /*html, body{
+    width: 100%;
+    position: relative;
+}*/
+
+  body,
+  html {
     overflow-x: hidden;
   }
 
