--- a/css/styles.css
+++ b/css/styles.css
@@ -755,9 +755,9 @@ footer {
 }
 
 /*solving hovering effect on cards in the services area cards*/
-@media (hover: hover) {
+@media (hover: none) {
   section .cards:hover {
-    box-shadow: 0 4px 12px rgb(0 0 0 / 25%);
-    transform: translateY(-5px);
+    box-shadow: inherit;
+    transform: inherit;
   }
 }
